# Lox-Tutorial

./: .gitignore  CLox.code-workspace  README.md
CLox/: .editorconfig  CMakeLists.txt  CMakePresets.json  TODO.md  chunk.c  chunk.h  clox.c  common.h  compiler.c  compiler.h  debug.c  debug.h  fileUtils.c  fileUtils.h  global.c  global.h  line.c  line.h  memory.c  memory.h  object.c  object.h  profile.ps1  scanner.c  scanner.h  start.ps1  table.c  table.h  value.c  value.h  vm.c  vm.h
CLox/benchmark/: benchmark.c  benchmark_config.h
CLox/benchmark/hashtable/: delete.c  delete.h  delete.txt  find.c  find.h  find.txt  hashTableBenchmarkUtils.c  hashTableBenchmarkUtils.h  high-collission.txt  insert.c  insert.h  insert.txt  insertHighCollision.c  insertHighCollision.h  insertHighCollision.txt  insert_result.txt  insert_string_literals.c  insert_string_literals.h  string_literals.txt
CLox/benchmark/hashtable/string_literals/: generate_string_literals.py  insert.c  insert.h  insert_result.txt  string_literals.txt
CLox/stdlib/: cast.c  cast.h  classUtils.c  classUtils.h  joinStr.c  joinStr.h  nativeErr.c  nativeErr.h  nativeIo.c  nativeIo.h  time.c  time.h
CLox/utils/: coerce.c  coerce.h  io.c  io.h  stringUtils.c  stringUtils.h
CLox/vmUtils/: fileUtils.c
JLox/: JLox.sln  README.md
JLox/Lox/: Analyzer.cs  Environment.cs  Expr.cs  Interpreter.cs  Lox.cs  ParseError.cs  Parser.cs  Resolver.cs  Scanner.cs  Token.cs  Void.cs
JLox/Lox/Callables/: Clock.cs  ILoxCallable.cs  LoxAnonymousFunction.cs  LoxClass.cs  LoxFunction.cs  LoxInstance.cs
JLox/Lox/Callables/StandardLibrary/: ArrayCallable.cs  ArrayInstance.cs  Clock.cs  StandardLibraryList.cs  Typeof.cs
JLox/Lox/Errors/: Break.cs  BreakException.cs  ParseError.cs  Return.cs  RuntimeError.cs
JLox/Lox/Expressions/: AstPrinter.cs  Expr.cs  Stmt.cs
JLox/Lox/Helpers/: ExtensionMethods.cs
JLox/Lox/Tree/: Expr.cs  Stmt.cs
JLox/Tool/: AstPrinterTest.cs  GenerateAst.cs  ITool.cs  Program.cs  Tool.csproj
Lox/: Lox.sln
Lox Scripts/: Adder.lox  Array.lox  Class.lox  Functions.lox  classTest.lox  do-while.lox  else-if.lox  functions-simple.lox  index.lox  locals.lox  loops.lox  repeat.lox  switch-expressions.lox  switch.lox  test.lox  upvalues.lox  vectore-closure-object.lox
Lox Scripts/benchs/: assignements.lox  controlf-flow.lox
Lox Scripts/benchs/closures/: no-upvalues.lox  results.md  upvalues.lox
Lox Scripts/gc-tests/: functions.lox  globals.lox  stack.lox
Lox/Lox/: ExtensionMethods.cs  Program.cs  Scanner.cs  Token.cs  TokenType.cs
